suggestion list added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<h1>Hello, World!</h1>
+<h1>Howdy, Pezi!</h1>
+<p>Do you have 10 minutes? How about:</p>
+<ul>
+    <li class="suggestion">Cleaning the kitchen?</li>
+    <li class="suggestion">Doing HUE homework?</li>
+    <li class="suggestion">Going for a swim?</li>
+</ul>
+
+<p>Create a new task for your TODO List.</p>
 </body>
 </html>
