task list view update: css positioning, buttons.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>ProcrastiRaptor - Welcome !</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
 <h1>Howdy, Pezi!</h1>
@@ -14,6 +15,6 @@
     <li class="suggestion">Going for a swim?</li>
 </ul>
 
-<p>Create a new task for your TODO List.</p>
+<p><i class="fa fa-plus"></i> Create a new task for your TODO List.</p>
 </body>
 </html>
