dummy navigation bar and some color scheme adjustments based on mockup

--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>ProcrastiRaptor - Welcome !</title>
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/raptorstyle.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
+<nav>
+    <ul>
+        <li class="active">home</li>
+        <li>task view</li>
+        <li>calender</li>
+        <li>stats</li>
+        <li style="float:right">user</li>
+    </ul>
+</nav>
+
+<header><h1>Hi-Diddily-Ho Champ!</h1>
+    <p>Do you have 15 minutes? Check out these awesome task:</p>
+</header>
+
 <div id="start_view">
-    <h1>Howdy, Pezi!</h1>
-    <p>Do you have 10 minutes? How about:</p>
+
+
     <ul id="start_suggestions">
         <li class="task cat_work">
             <div class="task_content">
