--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>ProcrastiRaptor - Welcome !</title>
-    <link href="css/raptorstyle.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -32,10 +32,6 @@
                     <div class="task_title">write dummy text</div>
                 </div>
             </div>
-            <div class="task_buttons">
-                <a class="btn btn-large" href="#"><i class="fa fa-clock-o fa-2x"></i></a>
-                <a class="btn btn-large" href="#"><i class="fa fa-check fa-2x"></i></a>
-            </div>
         </li>
         <li class="task cat_sport">
             <div class="task_content">
@@ -43,10 +39,6 @@
 
                     <div class="task_title">do 10 push-ups</div>
                 </div>
-            </div>
-            <div class="task_buttons">
-                <a class="btn btn-large" href="#"><i class="fa fa-clock-o fa-2x"></i></a>
-                <a class="btn btn-large" href="#"><i class="fa fa-check fa-2x"></i></a>
             </div>
         </li>
     </ul>
