png icons for navigation added

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
 <nav>
     <ul>
-        <li class="active">home</li>
-        <li>task view</li>
-        <li>calender</li>
-        <li>stats</li>
-        <li style="float:right">user</li>
+        <li class="active" id="home"><div ></div></li>
+        <li id="tasklist"></li>
+        <li id="calendar"></li>
+        <li id="stats"><div ></div></li>
+        <li style="float:right" id="user"></li>
     </ul>
 </nav>
 
