Raptor and speech bubble added.

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     </ul>
 </nav>
 
-<header><h1>Hi-Diddily-Ho Champ!</h1>
-    <p>Do you have 15 minutes? Check out these awesome task:</p>
+<header><div id="bubble"><div id="filler"></div><div id="greeting"><h1>Hi-Diddily-Ho Champ!</h1>
+    <p>Do you have 15 minutes? Check out these awesome tasks:</p></div></div>
 </header>
 
-<div id="start_view">
+<div id="task_suggestions">
 
 
     <ul id="start_suggestions">
