--- a/index.html
+++ b/index.html
@@ -18,28 +18,35 @@
 </nav>
 
 <header><div id="bubble"><div id="filler"></div><div id="greeting"><h1>Hi-Diddily-Ho Champ!</h1>
-    <p>Do you have 15 minutes? Check out these awesome tasks:</p></div></div>
+    <p>Do you have <a href="#">15 minutes</a>? Check out <a href="#">these awesome tasks</a>: </p></div></div>
 </header>
 
 <div id="task_suggestions">
 
 
-    <ul id="start_suggestions">
+    <ul class="tasks">
+
+
         <li class="task cat_work">
-            <div class="task_content">
-                <div class="task_head">
-
-                    <div class="task_title">write dummy text</div>
-                </div>
+            <div class="top_row">
+                <div class="due_in">2d10m</div><div class="task_title"><h2>html & css code for HUE mockup procrastiRaptor</h2></div>
             </div>
+            <div class="bottom_row">predictions: difficulty, satisfaction, effort</div>
         </li>
-        <li class="task cat_sport">
-            <div class="task_content">
-                <div class="task_head">
 
-                    <div class="task_title">do 10 push-ups</div>
-                </div>
+
+        <li class="task cat_sport">
+            <div class="top_row">
+                <div class="due_in">7w1d</div><div class="task_title"><h2>find b-day present for husband</h2></div>
             </div>
+            <div class="bottom_row expanded">predictions: difficulty, satisfaction, effort</div>
+        </li>
+
+        <li class="task">
+            <div class="top_row">
+                <div class="due_in">12w</div><div class="task_title"><h2>paint kitchen</h2></div>
+            </div>
+            <div class="bottom_row">predictions: difficulty, satisfaction, effort</div>
         </li>
     </ul>
 
