add button styled

--- a/index.html
+++ b/index.html
@@ -48,9 +48,14 @@
             </div>
             <div class="bottom_row">predictions: difficulty, satisfaction, effort</div>
         </li>
+
+
+        <li class="task add">
+           <div class="task_title add"><h2>add</h2></div>
+
+        </li>
     </ul>
 
-    <p><a href="#" class="btn"><i class="fa fa-plus"></i> Create a new task for your TODO List.</a></p>
 </div>
 
 </body>
