due time description added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <li class="task cat_work">
             <div class="top_row">
-                <div class="due_in">2d10m</div><div class="task_title"><h2>html & css code for HUE mockup procrastiRaptor</h2></div>
+                <div class="due_in"><div>2d10m</div><div class="description">due in</div></div><div class="task_title"><h2>html & css code for HUE mockup procrastiRaptor</h2></div>
             </div>
             <div class="bottom_row">predictions: difficulty, satisfaction, effort</div>
         </li>
@@ -37,14 +37,14 @@
 
         <li class="task cat_sport">
             <div class="top_row">
-                <div class="due_in">7w1d</div><div class="task_title"><h2>find b-day present for husband</h2></div>
+                <div class="due_in"><div>7w1d</div><div class="description">due in</div></div><div class="task_title"><h2>find b-day present for husband</h2></div>
             </div>
             <div class="bottom_row expanded">predictions: difficulty, satisfaction, effort</div>
         </li>
 
         <li class="task">
             <div class="top_row">
-                <div class="due_in">12w</div><div class="task_title"><h2>paint kitchen</h2></div>
+                <div class="due_in"><div>12w</div><div class="description">due in</div></div><div class="task_title"><h2>paint kitchen</h2></div>
             </div>
             <div class="bottom_row">predictions: difficulty, satisfaction, effort</div>
         </li>
