3rd pyramid version

--- a/pyramid.html
+++ b/pyramid.html
@@ -6,10 +6,21 @@
     <link href="css/pyramid.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<div class="shape one"></div>
-<div class="shape two"></div>
+<h1>version 1</h1>
+<div class="shape one bla"></div>
+<div class="shape two bla"></div>
 <div class="shape three"></div>
 <div class="shape four"></div>
 <div class="shape five"></div>
+<h1>version 2</h1>
+<div class="shape top"></div>
+<div class="shape bottom"></div>
+
+<h1>version 3</h1>
+<div class="shape1 one1 bla"></div>
+<div class="shape1 two1 bla"></div>
+<div class="shape1 three1"></div>
+<div class="shape1 four1"></div>
+<div class="shape1 five1"></div>
 </body>
 </html>
