added difficulty pyramid and satisfaction emojis

--- a/index.html
+++ b/index.html
@@ -31,7 +31,18 @@
             <div class="top_row">
                 <div class="due_in"><div>2d10m</div><div class="description">due in</div></div><div class="task_title"><h2>html & css code for HUE mockup procrastiRaptor</h2></div>
             </div>
-            <div class="bottom_row">predictions: difficulty, satisfaction, effort</div>
+            <div class="bottom_row expanded">
+                <div class="difficulty">
+                    <div class="trapez one grey"></div>
+                    <div class="trapez two grey"></div>
+                    <div class="trapez three"></div>
+                    <div class="trapez four"></div>
+                    <div class="trapez five"></div>
+                    <div class="description">difficulty</div>
+                </div>
+                <div class="satisfaction"><div class="king"></div><span class="description">satisfaction</span></div>
+                <div class="effort"></div>
+            </div>
         </li>
 
 
@@ -39,14 +50,36 @@
             <div class="top_row">
                 <div class="due_in"><div>7w1d</div><div class="description">due in</div></div><div class="task_title"><h2>find b-day present for husband</h2></div>
             </div>
-            <div class="bottom_row expanded">predictions: difficulty, satisfaction, effort</div>
+            <div class="bottom_row expanded">
+                <div class="difficulty">
+                    <div class="trapez one"></div>
+                    <div class="trapez two"></div>
+                    <div class="trapez three"></div>
+                    <div class="trapez four"></div>
+                    <div class="trapez five"></div>
+                    <div class="description">difficulty</div>
+                </div>
+                <div class="satisfaction"><div class="glad"></div><span class="description">satisfaction</span></div>
+                <div class="effort"></div>
+            </div>
         </li>
 
         <li class="task">
             <div class="top_row">
                 <div class="due_in"><div>12w</div><div class="description">due in</div></div><div class="task_title"><h2>paint kitchen</h2></div>
             </div>
-            <div class="bottom_row">predictions: difficulty, satisfaction, effort</div>
+            <div class="bottom_row expanded">
+                <div class="difficulty">
+                    <div class="trapez one grey"></div>
+                    <div class="trapez two grey"></div>
+                    <div class="trapez three grey"></div>
+                    <div class="trapez four grey"></div>
+                    <div class="trapez five"></div>
+                    <div class="description">difficulty</div>
+                </div>
+                <div class="satisfaction"><div class="indifferent"></div><span class="description">satisfaction</span></div>
+                <div class="effort"></div>
+            </div>
         </li>
 
 
