--- a/pyramid.html
+++ b/pyramid.html
@@ -17,10 +17,10 @@
 <div class="shape bottom"></div>
 
 <h1>version 3</h1>
-<div class="shape1 one1 bla"></div>
-<div class="shape1 two1 bla"></div>
-<div class="shape1 three1"></div>
-<div class="shape1 four1"></div>
-<div class="shape1 five1"></div>
+<div class="trapez one1 bla"></div>
+<div class="trapez two1 bla"></div>
+<div class="trapez three1"></div>
+<div class="trapez four1"></div>
+<div class="trapez five1"></div>
 </body>
 </html>
