predicted time added

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
                     <div class="description">difficulty</div>
                 </div>
                 <div class="satisfaction"><div class="king"></div><span class="description">satisfaction</span></div>
-                <div class="effort"></div>
+                <div class="effort">
+                    <div class="invested right"><span>5d</span> <div class="description right">invested</div> </div>
+                    <div class="predicted"><span>2d 3h</span> <div class="description">predicted</div> </div>
+                </div>
             </div>
         </li>
 
@@ -60,7 +63,10 @@
                     <div class="description">difficulty</div>
                 </div>
                 <div class="satisfaction"><div class="glad"></div><span class="description">satisfaction</span></div>
-                <div class="effort"></div>
+                <div class="effort">
+                    <div class="invested right"><span>0</span> <div class="description right">invested</div> </div>
+                    <div class="predicted"><span>1d</span> <div class="description">predicted</div> </div>
+                </div>
             </div>
         </li>
 
@@ -78,7 +84,10 @@
                     <div class="description">difficulty</div>
                 </div>
                 <div class="satisfaction"><div class="indifferent"></div><span class="description">satisfaction</span></div>
-                <div class="effort"></div>
+                <div class="effort">
+                    <div class="invested right"><span>35min</span> <div class="description right">invested</div> </div>
+                    <div class="predicted"><span>5h</span> <div class="description">predicted</div> </div>
+                </div>
             </div>
         </li>
 
