--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>ProcrastiRaptor - Welcome !</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
 </head>
 <body>
 <nav>
@@ -31,13 +32,13 @@
             <div class="top_row">
                 <div class="due_in"><div>2d10m</div><div class="description">due in</div></div><div class="task_title"><h2>html & css code for HUE mockup procrastiRaptor</h2></div>
             </div>
-            <div class="bottom_row expanded">
+            <div class="bottom_row">
                 <div class="difficulty">
-                    <div class="trapez one grey"></div>
-                    <div class="trapez two grey"></div>
-                    <div class="trapez three"></div>
-                    <div class="trapez four"></div>
-                    <div class="trapez five"></div>
+                    <div class="trapez trapez_1 grey"></div>
+                    <div class="trapez trapez_2 grey"></div>
+                    <div class="trapez trapez_3"></div>
+                    <div class="trapez trapez_4"></div>
+                    <div class="trapez trapez_5"></div>
                     <div class="description">difficulty</div>
                 </div>
                 <div class="satisfaction"><div class="king"></div><span class="description">satisfaction</span></div>
@@ -53,13 +54,13 @@
             <div class="top_row">
                 <div class="due_in"><div>7w1d</div><div class="description">due in</div></div><div class="task_title"><h2>find b-day present for husband</h2></div>
             </div>
-            <div class="bottom_row expanded">
+            <div class="bottom_row">
                 <div class="difficulty">
-                    <div class="trapez one"></div>
-                    <div class="trapez two"></div>
-                    <div class="trapez three"></div>
-                    <div class="trapez four"></div>
-                    <div class="trapez five"></div>
+                    <div class="trapez trapez_1"></div>
+                    <div class="trapez trapez_2"></div>
+                    <div class="trapez trapez_3"></div>
+                    <div class="trapez trapez_4"></div>
+                    <div class="trapez trapez_5"></div>
                     <div class="description">difficulty</div>
                 </div>
                 <div class="satisfaction"><div class="glad"></div><span class="description">satisfaction</span></div>
@@ -74,13 +75,13 @@
             <div class="top_row">
                 <div class="due_in"><div>12w</div><div class="description">due in</div></div><div class="task_title"><h2>paint kitchen</h2></div>
             </div>
-            <div class="bottom_row expanded">
+            <div class="bottom_row">
                 <div class="difficulty">
-                    <div class="trapez one grey"></div>
-                    <div class="trapez two grey"></div>
-                    <div class="trapez three grey"></div>
-                    <div class="trapez four grey"></div>
-                    <div class="trapez five"></div>
+                    <div class="trapez trapez_1 grey"></div>
+                    <div class="trapez trapez_2 grey"></div>
+                    <div class="trapez trapez_3 grey"></div>
+                    <div class="trapez trapez_4 grey"></div>
+                    <div class="trapez trapez_5"></div>
                     <div class="description">difficulty</div>
                 </div>
                 <div class="satisfaction"><div class="indifferent"></div><span class="description">satisfaction</span></div>
@@ -100,5 +101,8 @@
 
 </div>
 
+
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="js/tasklist.js"></script>
 </body>
 </html>
