--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p>Do you have <a href="#">15 minutes</a>? Check out <a href="#">these awesome tasks</a>: </p></div></div>
 </header>
 
-<div id="task_suggestions">
+<main><div id="task_suggestions">
 
 
     <ul class="tasks">
@@ -100,7 +100,7 @@
 
     </ul>
 
-</div>
+</div></main>
 
 
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
