updated css styles to accommodate to sticky nav

--- a/index.html
+++ b/index.html
@@ -91,17 +91,18 @@
                 </div>
             </div>
         </li>
-
-    <a href="add_task.php">
-        <li class="task add">
-           <div class="task_title add"><h2>add</h2></div>
-        </li>
-    </a>
-
     </ul>
 
-</div></main>
+</div>
+</main>
+<footer>
 
+    <a href="add_task.php">
+        <div class=" task task_title add">
+            <h2>add</h2>
+        </div>
+    </a>
+</footer>
 
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="js/tasklist.js"></script>
