--- a/index.html
+++ b/index.html
@@ -369,6 +369,7 @@
 </footer>
 
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="js/storage.js"></script>
 <script type="text/javascript" src="js/tasklist.js"></script>
 <script type="text/javascript" src="js/views.js"></script>
 <script type="text/javascript" src="js/form.js"></script>
