storage form update

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         <form>
 
             <label for="f_title">Title</label> <input type="text" id="f_title">
-            <label for="f_categories">Category</label> <select id="f_categories">
+            <label for="f_category">Category</label> <select id="f_category">
             <option label=" "></option>
             <option value="health">Health</option>
             <option value="work">Work</option>
@@ -346,7 +346,7 @@
             <option>bla</option>
         </select>
             <label for="f_duration">Predicted effort in time</label>
-            <input type="text" size="10" maxlength="10" placeholder = '1d 10h 5m' id="f_duration" class="duration"/>
+            <input type="text" size="10" maxlength="10" placeholder = '1d 10h 5m' id="f_duration" data-seconds="0" class="duration"/>
             <label for="f_priority">Priority</label><select id="f_priority">
             <option>A - High Priority</option>
             <option>B - Medium Priority</option>
