display db content in list - first test successful

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <main>
 
 
-        <ul class="tasks">
+        <ul class="tasks" id="ul_tasks">
             <li class="task cat_sport">
                 <div class="top_row">
                     <div class="due_in overdue"><div>-15h</div><div class="description">due in</div></div><div class="task_title"><h2>do 20 push-ups</h2></div>
@@ -335,8 +335,8 @@
 
     <main>
         <div id="form_messages">
-            <span id="form_success" class="form_msg">Success!</span>
-            <span id="form_fail" class="form_msg">Error!</span>
+            <p id="form_success" class="form_msg">Success!</p>
+            <p id="form_fail" class="form_msg">Error!</p>
         </div>
         <form id="form_add_task">
 
