update on list element contents

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <li class="task cat_work">
                 <div class="top_row">
-                    <div class="due_in"><div>2d10m</div><div class="description">due in</div></div><div class="task_title"><h2>html & css code for HUE mockup procrastiRaptor</h2></div>
+                    <div class="duetime"><div>2d10m</div><div class="description">due in</div></div><div class="task_title"><h2>html & css code for HUE mockup procrastiRaptor</h2></div>
                 </div>
                 <div class="bottom_row">
                     <div class="difficulty">
@@ -50,7 +50,7 @@
 
             <li class="task cat_sport">
                 <div class="top_row">
-                    <div class="due_in"><div>7w1d</div><div class="description">due in</div></div><div class="task_title"><h2>find b-day present for husband</h2></div>
+                    <div class="duetime"><div>7w1d</div><div class="description">due in</div></div><div class="task_title"><h2>find b-day present for husband</h2></div>
                 </div>
                 <div class="bottom_row">
                     <div class="difficulty">
@@ -71,7 +71,7 @@
 
             <li class="task">
                 <div class="top_row">
-                    <div class="due_in"><div>12w</div><div class="description">due in</div></div><div class="task_title"><h2>paint kitchen</h2></div>
+                    <div class="duetime"><div>12w</div><div class="description">due in</div></div><div class="task_title"><h2>paint kitchen</h2></div>
                 </div>
                 <div class="bottom_row">
                     <div class="difficulty">
@@ -217,6 +217,7 @@
             <option value="work">Work</option>
             <option value="school">School</option>
             <option value="home">Home</option>
+            <option value="sport">Sport</option>
         </select>
             <label for="f_duedatetime">Due</label><input type="datetime" id="f_duedatetime" name="f_duedatetime">
             <label for="f_pdifficulty">Predicted difficulty</label><input type="range" id="f_pdifficulty">
