Gestures for task items added: delete, check, edit

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>ProcrastiRaptor - Welcome !</title>
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" media="all" rel="stylesheet" type="text/css">
     <link href="css/form.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -253,9 +253,12 @@
 </footer>
 
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="js/hammer.js"></script>
+<script type="text/javascript" src="js/form.js"></script>
 <script type="text/javascript" src="js/storage.js"></script>
 <script type="text/javascript" src="js/tasklist.js"></script>
 <script type="text/javascript" src="js/views.js"></script>
-<script type="text/javascript" src="js/form.js"></script>
+
+
 </body>
 </html>
