predicted and invested time effort debugged

--- a/index.html
+++ b/index.html
@@ -231,13 +231,13 @@
                     <div class="col-md-4">
                         <div class="checkbox">
                             <label for="f_p_difficulty-0">
-                                <input name="f_p_difficulty" id="f_p_difficulty-0" value="1" type="checkbox">
+                                <input name="f_p_difficulty" id="f_p_difficulty-0" value="5" type="checkbox">
                                 1
                             </label>
                         </div>
                         <div class="checkbox">
                             <label for="f_p_difficulty-1">
-                                <input name="f_p_difficulty" id="f_p_difficulty-1" value="2" type="checkbox">
+                                <input name="f_p_difficulty" id="f_p_difficulty-1" value="4" type="checkbox">
                                 2
                             </label>
                         </div>
@@ -249,13 +249,13 @@
                         </div>
                         <div class="checkbox">
                             <label for="f_p_difficulty-3">
-                                <input name="f_p_difficulty" id="f_p_difficulty-3" value="4" type="checkbox">
+                                <input name="f_p_difficulty" id="f_p_difficulty-3" value="2" type="checkbox">
                                 4
                             </label>
                         </div>
                         <div class="checkbox">
                             <label for="f_p_difficulty-4">
-                                <input name="f_p_difficulty" id="f_p_difficulty-4" value="5" type="checkbox">
+                                <input name="f_p_difficulty" id="f_p_difficulty-4" value="1" type="checkbox">
                                 5
                             </label>
                         </div>
@@ -267,28 +267,28 @@
                     <label class="col-md-4 control-label" for="f_p_satisfaction">Predicted Satisfaction</label>
                     <div class="col-md-4" id="f_p_satisfaction_group">
                         <label class="radio-inline" for="f_p_satisfaction-0">
-                            <input id="f_p_satisfaction-0" value="1" checked="checked" type="radio" required>
-                            <div class="satisfaction"><div name="f_p_satisfaction" class="indifferent grey"></div></div>
+                            <input name="f_p_satisfaction" id="f_p_satisfaction-0" value="indifferent" checked="checked" type="radio" required>
+                            <div class="satisfaction"><div name="f_p_satisfaction_emo" class="indifferent grey"></div></div>
                         </label>
                         <label class="radio-inline" for="f_p_satisfaction-1">
-                            <input id="f_p_satisfaction-1" value="2" type="radio">
-                            <div class="satisfaction"><div name="f_p_satisfaction" class="glad grey"></div></div>
+                            <input name="f_p_satisfaction" id="f_p_satisfaction-1" value="glad" type="radio">
+                            <div class="satisfaction"><div name="f_p_satisfaction_emo" class="glad grey"></div></div>
                         </label>
                         <label class="radio-inline" for="f_p_satisfaction-2">
-                            <input id="f_p_satisfaction-2" value="3" type="radio">
-                            <div class="satisfaction"><div name="f_p_satisfaction" class="wink grey"></div></div>
+                            <input name="f_p_satisfaction" id="f_p_satisfaction-2" value="wink" type="radio">
+                            <div class="satisfaction"><div name="f_p_satisfaction_emo" class="wink grey"></div></div>
                         </label>
                         <label class="radio-inline" for="f_p_satisfaction-3">
-                            <input id="f_p_satisfaction-3" value="4" type="radio">
-                            <div class="satisfaction"><div name="f_p_satisfaction" class="laughing grey"></div></div>
+                            <input name="f_p_satisfaction" id="f_p_satisfaction-3" value="laughing" type="radio">
+                            <div class="satisfaction"><div name="f_p_satisfaction_emo" class="laughing grey"></div></div>
                         </label>
                         <label class="radio-inline" for="f_p_satisfaction-4">
-                            <input id="f_p_satisfaction-4" value="5" type="radio">
-                            <div class="satisfaction"><div name="f_p_satisfaction" class="king grey"></div></div>
+                            <input name="f_p_satisfaction" id="f_p_satisfaction-4" value="king" type="radio">
+                            <div class="satisfaction"><div name="f_p_satisfaction_emo" class="king grey"></div></div>
                         </label>
                         <label class="radio-inline" for="f_p_satisfaction-5">
-                            <input id="f_p_satisfaction-5" value="6" type="radio">
-                            <div class="satisfaction"><div name="f_p_satisfaction" class="pirate grey"></div></div>
+                            <input name="f_p_satisfaction" id="f_p_satisfaction-5" value="pirate" type="radio">
+                            <div class="satisfaction"><div name="f_p_satisfaction_emo" class="pirate grey"></div></div>
                         </label>
                     </div>
                 </div>
